# frameit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
frameit/: __init__.py  cache.py  utils.py
tests/: mock_cache.json  mock_frameit_meta.json
tests/integration/: test_integration_frameit.py
tests/unit/: test_cache.py  test_utils.py
