[tool.poetry]
name = "frameit"
version = "0.1.0"
description = "A quick and dirty tool for caching Pandas and Polars DataFrames"
authors = ["Filip Wennberg <lhfwennberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=1.4"
polars = ">=0.17.0"
pyarrow = "^12.0.1"


[tool.poetry.group.dev.dependencies]
parametrize = "^0.1.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
